--- a/backend/Infrastructure/Infrastructure.Data/Infrastructure.Data.csproj
+++ b/backend/Infrastructure/Infrastructure.Data/Infrastructure.Data.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Domain\Domain\Domain.csproj" />
+    <ProjectReference Include="..\..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\..\Domain\Domain\Domain1.csproj" />
   </ItemGroup>
 
 </Project>
