--- a/backend/Domain/Domain.csproj
+++ b/backend/Domain/Domain.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.Data\Infrastructure.Data.csproj" />
+  </ItemGroup>
+
 </Project>
