--- a/backend/Api/appsettings.Development.json
+++ b/backend/Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=LuizaLabsChallenge;User Id=sa;Password=testE@123;"
+    "DefaultConnection": "Server=localhost;Database=LuizaLabsChallenge;User Id=sa;Password=StrongPassw0rd;TrustServerCertificate=True"
   }
 }
