--- a/UserApi/Infrastructure/Infrastructure.Services/Infrastructure.Services.csproj
+++ b/UserApi/Infrastructure/Infrastructure.Services/Infrastructure.Services.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\v1\" />
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.3.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.3.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\CrossCutting.Configuration\CrossCutting.Configuration.csproj" />
   </ItemGroup>
 
 </Project>
