wip: add send email endpoint and configure smtp

--- a/NotificationApi/Api/appsettings.Development.json
+++ b/NotificationApi/Api/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Settings": {
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "Smtp": {
+      "host": "smtp.gmail.com",
+      "port": 587,
+      "password": "suasenha",
+      "mailFromName": "LuizaLabs",
+      "mailFromEmail": "seuemail@gmail.com"
     }
   }
 }
