--- a/NotificationApi/Api/appsettings.json
+++ b/NotificationApi/Api/appsettings.json
@@ -1,9 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Settings": {
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*",
+    "Smtp": {
+      "host": "smtp.gmail.com",
+      "port": 587,
+      "password": "suasenha",
+      "mailFromName": "LuizaLabs",
+      "mailFromEmail": "seuemail@gmail.com"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
