--- a/UserApi/Api/Api.csproj
+++ b/UserApi/Api/Api.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CrossCutting.Configuration\CrossCutting.Configuration.csproj" />
+    <ProjectReference Include="..\CrossCutting\CrossCutting.Configuration\CrossCutting.Configuration.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.Data\Infrastructure.Data.csproj" />
   </ItemGroup>
