--- a/UserApi/Infrastructure/Infrastructure.Services/Infrastructure.Services.csproj
+++ b/UserApi/Infrastructure/Infrastructure.Services/Infrastructure.Services.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CrossCutting.Configuration\CrossCutting.Configuration.csproj" />
+    <ProjectReference Include="..\..\CrossCutting\CrossCutting.Configuration\CrossCutting.Configuration.csproj" />
   </ItemGroup>
 
 </Project>
