--- a/NotificationApi/Infrastructure/Infrastructure.Services/Infrastructure.Services.csproj
+++ b/NotificationApi/Infrastructure/Infrastructure.Services/Infrastructure.Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.8.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
     <PackageReference Include="MimeKit" Version="4.8.0" />
   </ItemGroup>
 
