--- a/UserApi/Infrastructure/Infrastructure.Services/Infrastructure.Services.csproj
+++ b/UserApi/Infrastructure/Infrastructure.Services/Infrastructure.Services.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\CrossCutting\CrossCutting.Configuration\CrossCutting.Configuration.csproj" />
+    <ProjectReference Include="..\..\CrossCutting\CrossCutting.Exceptions\CrossCutting.Exceptions.csproj" />
     <ProjectReference Include="..\Infrastructure.Data\Infrastructure.Data.csproj" />
   </ItemGroup>
 
