--- a/NotificationApi/Api/Api.csproj
+++ b/NotificationApi/Api/Api.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CrossCutting\CrossCutting.Configuration\CrossCutting.Configuration.csproj" />
+    <ProjectReference Include="..\CrossCutting\CrossCutting.Exceptions\CrossCutting.Exceptions.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.Services\Infrastructure.Services.csproj" />
   </ItemGroup>
