feat: email confirmation

--- a/UserApi/Api/appsettings.Development.json
+++ b/UserApi/Api/appsettings.Development.json
@@ -19,5 +19,8 @@
       "id": "notification",
       "baseUrl": "https://localhost:44395"
     }
-  ]
+  ],
+  "NotificationSettings": {
+    "baseUrl": "http://localhost:5173"
+  }
 }
