--- a/UserApi/Api/appsettings.json
+++ b/UserApi/Api/appsettings.json
@@ -20,5 +20,8 @@
       "id": "notification",
       "baseUrl": "http://notification-api:8080"
     }
-  ]
+  ],
+  "NotificationSettings": {
+    "baseUrl": "http://localhost:5173"
+  }
 }
