fix: adjusting smtp variables to accept any smtp server configs

--- a/NotificationApi/Api/appsettings.Development.json
+++ b/NotificationApi/Api/appsettings.Development.json
@@ -6,10 +6,10 @@
     }
   },
   "Smtp": {
-    "host": "smtp.gmail.com",
+    "host": "seu-host",
     "port": 587,
-    "password": "suasenha",
-    "mailFromName": "LuizaLabs",
-    "mailFromEmail": "seuemail@gmail.com"
+    "password": "sua-senha",
+    "mailFromName": "seu-nome-de-remetente",
+    "mailFromEmail": "seu-email-de-remetente"
   }
 }
