--- a/NotificationApi/Api/appsettings.json
+++ b/NotificationApi/Api/appsettings.json
@@ -1,16 +1,16 @@
 {
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
   "Smtp": {
-    "host": "smtp.gmail.com",
+    "host": "seu-host",
     "port": 587,
-    "password": "suasenha",
-    "mailFromName": "LuizaLabs",
-    "mailFromEmail": "seuemail@gmail.com"
+    "password": "sua-senha",
+    "mailFromName": "seu-nome-de-remetente",
+    "mailFromEmail": "seu-email-de-remetente"
   }
 }
